# ollama-crew-ai-agents

./: main.py  model.txt  pyproject.toml
app/utils/: logger.py
